--- a/FacturacionFerreteriaRepositorioBDII/nbproject/project.properties
+++ b/FacturacionFerreteriaRepositorioBDII/nbproject/project.properties
@@ -63,7 +63,9 @@ javac.classpath=\
     ${file.reference.synthetica.jar}:\
     ${file.reference.syntheticaAluOxide.jar}:\
     ${libs.hibernate4-support.classpath}:\
-    ${libs.jpa2-persistence.classpath}
+    ${libs.jpa2-persistence.classpath}:\
+    ${libs.JasperReports.classpath}:\
+    ${libs.JasperReportd.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
