--- a/FacturacionFerreteriaRepositorioBDII/lib/nblibraries.properties
+++ b/FacturacionFerreteriaRepositorioBDII/lib/nblibraries.properties
@@ -22,6 +22,49 @@ libs.hibernate4-support.displayName=Hibernate 4.3.x
 libs.hibernate4-support.javadoc=\
     ${base}/hibernate4-support/javax.persistence-2.1.0-doc.zip
 libs.hibernate4-support.prop-maven-dependencies=\n                org.hibernate:hibernate-entitymanager:4.3.1.Final:jar\n            
+libs.JasperReportd.classpath=\
+    ${base}/JasperReportd/jasperreports-5.1.2.jar:\
+    ${base}/JasperReportd/jasperreports-chart-themes-3.7.4.jar:\
+    ${base}/JasperReportd/jasperreports-extensions-3.5.3.jar:\
+    ${base}/JasperReportd/jasperreports-fonts-3.7.4.jar:\
+    ${base}/JasperReportd/jasperreports-javaflow-5.1.2.jar:\
+    ${base}/JasperReportd/commons-beanutils-1.8.2.jar:\
+    ${base}/JasperReportd/commons-collections-3.2.1.jar:\
+    ${base}/JasperReportd/commons-digester-2.1.jar:\
+    ${base}/JasperReportd/commons-logging-1.1.1.jar:\
+    ${base}/JasperReportd/groovy-all-2.0.1.jar:\
+    ${base}/JasperReportd/iText-2.1.7.js2.jar:\
+    ${base}/JasperReportd/png-encoder-1.5.jar:\
+    ${base}/JasperReportd/poi-3.7-20101029.jar:\
+    ${base}/JasperReportd/spring.jar
+libs.JasperReports.classpath=\
+    ${base}/JasperReports/commons-collections-3.2.1.jar:\
+    ${base}/JasperReports/commons-logging-1.1.jar:\
+    ${base}/JasperReports/jaxen-1.1.1.jar:\
+    ${base}/JasperReports/jcommon-1.0.15.jar:\
+    ${base}/JasperReports/jfreechart-1.0.12.jar:\
+    ${base}/JasperReports/jpa.jar:\
+    ${base}/JasperReports/png-encoder-1.5.jar:\
+    ${base}/JasperReports/xalan.jar:\
+    ${base}/JasperReports/xml-apis.jar:\
+    ${base}/JasperReports/batik-anim.jar:\
+    ${base}/JasperReports/batik-awt-util.jar:\
+    ${base}/JasperReports/batik-bridge.jar:\
+    ${base}/JasperReports/batik-css.jar:\
+    ${base}/JasperReports/batik-dom.jar:\
+    ${base}/JasperReports/batik-ext.jar:\
+    ${base}/JasperReports/batik-gvt.jar:\
+    ${base}/JasperReports/batik-parser.jar:\
+    ${base}/JasperReports/batik-script.jar:\
+    ${base}/JasperReports/batik-svg-dom.jar:\
+    ${base}/JasperReports/batik-svggen.jar:\
+    ${base}/JasperReports/batik-util.jar:\
+    ${base}/JasperReports/batik-xml.jar:\
+    ${base}/JasperReports/rhino-1.7R1.jar:\
+    ${base}/JasperReports/xml-apis-ext.jar:\
+    ${base}/JasperReports/castor-1.2.jar:\
+    ${base}/JasperReports/barbecue-1.5-beta1.jar
+libs.JasperReports.displayName=JasperReports 3.0.1
 libs.jpa2-persistence.classpath=\
     ${base}/jpa2-persistence/hibernate-jpa-2.1-api-1.0.0.Final.jar
 libs.jpa2-persistence.displayName=Persistence JPA2.1
